Practice/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: website
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
      name: wordpress-pod
      namespace: website
    spec:
      containers:
      - image: wordpress
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        volumeMounts:
          - mountPath: /var/www/html
            name: wordpress
        readinessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 10 
          initialDelaySeconds: 80
          periodSeconds: 10 
      restartPolicy: Always  
      volumes:
        - name: wordpress
          hostPath:
            path: /data/wordpress
      #      tolerations:
      #- key: "app"
      #  operator: "Equal"
      #  value: "wordpress"
